fotter updated with href

--- a/about.html
+++ b/about.html
@@ -181,52 +181,83 @@
     <footer>
       <div class="footer-col">
         <h3>About Us</h3>
-        <p>USHA Engineering Services (P) Ltd. is a consulting company established </p>
-        <p>and registered as USHA Engineering services in October 02, 1991 to Provide</p>
-        <p>high quality professional services. This Organization was registered in the</p><p>Department of Industry, HMG/Nepal as per the private firm Registration</p><p>Act 2014 of  HMG/ Nepal with registration No.12860/048. Its head office was at</p><p>New Baneshwor, Kathmandu, Nepal (Presently shifted to Sewa Path, Bhairahawa,</p> <p>Nepal). It has been registered as Usha Engineering Services (P) Ltd. in the Office of</p><p>Company Registraron August 09, 2001 with Private Registration No.-16271/058-59.</p><p>Since then, it is rapidly growing as a notable consulting company in Nepal with</p><p>engagement in variousprofessional services..</p>
+        <p>
+          USHA Engineering Services (P) Ltd. is a consulting company established
+        </p>
+        <p>
+          and registered as USHA Engineering services in October 02, 1991 to
+          Provide
+        </p>
+        <p>
+          high quality professional services. This Organization was registered
+          in the
+        </p>
+        <p>
+          Department of Industry, HMG/Nepal as per the private firm Registration
+        </p>
+        <p>
+          Act 2014 of HMG/ Nepal with registration No.12860/048. Its head office
+          was at
+        </p>
+        <p>
+          New Baneshwor, Kathmandu, Nepal (Presently shifted to Sewa Path,
+          Bhairahawa,
+        </p>
+        <p>
+          Nepal). It has been registered as Usha Engineering Services (P) Ltd.
+          in the Office of
+        </p>
+        <p>
+          Company Registraron August 09, 2001 with Private Registration
+          No.-16271/058-59.
+        </p>
+        <p>
+          Since then, it is rapidly growing as a notable consulting company in
+          Nepal with
+        </p>
+        <p>engagement in variousprofessional services..</p>
       </div>
 
       <div class="footer-col">
         <h3>Contact Us</h3>
-        <li>+977-71-571632</li>
-        <li>+977-9857012648</li>
-        <li>+977-9857021648</li>
-        <li>info@uespl.com.np</li>
-        <li>uespl.org@gmail.com</li>
+        <a href="tel:+97771571632"><li>+977-71-571632</li></a>
+        <a href="tel:9857012648"><li>+977-9857012648</li></a>
+        <a href="tel:9857021648"><li>+977-9857021648</li></a>
+        <a href="mailto:info@uespl.com.np"><li>info@uespl.com.np</li></a>
+        <a href="mailto:uespl.org@gmail.com"><li>uespl.org@gmail.com</li></a>
       </div>
-
+      +
       <div class="footer-col">
         <h3>Quick Links</h3>
         <a href="index.html"><li>Home</li></a>
         <a href="about.html"><li>About us</li></a>
-        <a href="contact.html"><li>Contact us</li></a>
-        <a href="services.html"><li>Services</li></a>
         <a href="projects.html"><li>Projects</li></a>
+        <a href="services.html"><li>Services</li></a>
+        <a href="contact.html"><li>Contact us</li></a>
       </div>
 
       <div class="footer-col">
         <h3>Our Services</h3>
-        <li>Architectural Design</li>
-        <li>Structural Design</li>
-        <li>Interior Design</li>
-        <li>Valuation</li>
-        <li>Retrofit Design</li>
+        <a href="services.html"><li>Architectural Design</li></a>
+        <a href="services.html"><li>Structural Design</li></a>        
+        <a href="services.html"><li>Interior Design</li></a>        
+        <a href="services.html"><li>Valuation</li></a>        
+        <a href="services.html"><li>Retrofit Design</li></a>       
       </div>
 
       <div class="footer-col">
         <h3>More Services</h3>
-        <li>IEE And EIA Consultation</li>
-        <li>Soli and Material Testing</li>
-        <li>Vastu Consultation</li>
-        <li>Surveying</li>
-        <li>Site Supervision</li>
+        <a href="services.html"><li>IEE And EIA Consultation</li></a>
+        <a href="services.html"><li>Soli and Material Testing</li></a>
+        <a href="services.html"><li>Vastu Consultation</li></a>
+        <a href="services.html"><li>Surveying</li></a>
+        <a href="services.html"><li>Site Supervision</li></a>
       </div>
 
       <div class="copyright">
         <p class="rights">
           &#169; USHA Engineering Services (P). Ltd. All rights Reserved
         </p>
-        
         <div class="pro-links">
           <a
             href="https://www.facebook.com/people/USHA-Engineering-Services-Pvt-Ltd/100062410158912/"
