--- a/services.html
+++ b/services.html
@@ -180,38 +180,38 @@
 
       <div class="footer-col">
         <h3>Contact Us</h3>
-        <li>+977-71-571632</li>
-        <li>+977-9857012648</li>
-        <li>+977-9857021648</li>
-        <li>info@uespl.com.np</li>
-        <li>uespl.org@gmail.com</li>
+        <a href="tel:+97771571632"><li>+977-71-571632</li></a>
+        <a href="tel:9857012648"><li>+977-9857012648</li></a>
+        <a href="tel:9857021648"><li>+977-9857021648</li></a>
+        <a href="mailto:info@uespl.com.np"><li>info@uespl.com.np</li></a>
+        <a href="mailto:uespl.org@gmail.com"><li>uespl.org@gmail.com</li></a>
       </div>
       +
       <div class="footer-col">
         <h3>Quick Links</h3>
         <a href="index.html"><li>Home</li></a>
         <a href="about.html"><li>About us</li></a>
-        <a href="contact.html"><li>Contact us</li></a>
-        <a href="services.html"><li>Services</li></a>
         <a href="projects.html"><li>Projects</li></a>
+        <a href="services.html"><li>Services</li></a>
+        <a href="contact.html"><li>Contact us</li></a>
       </div>
 
       <div class="footer-col">
         <h3>Our Services</h3>
-        <li>Architectural Design</li>
-        <li>Structural Design</li>
-        <li>Interior Design</li>
-        <li>Valuation</li>
-        <li>Retrofit Design</li>
+        <a href="services.html"><li>Architectural Design</li></a>
+        <a href="services.html"><li>Structural Design</li></a>        
+        <a href="services.html"><li>Interior Design</li></a>        
+        <a href="services.html"><li>Valuation</li></a>        
+        <a href="services.html"><li>Retrofit Design</li></a>       
       </div>
 
       <div class="footer-col">
         <h3>More Services</h3>
-        <li>IEE And EIA Consultation</li>
-        <li>Soli and Material Testing</li>
-        <li>Vastu Consultation</li>
-        <li>Surveying</li>
-        <li>Site Supervision</li>
+        <a href="services.html"><li>IEE And EIA Consultation</li></a>
+        <a href="services.html"><li>Soli and Material Testing</li></a>
+        <a href="services.html"><li>Vastu Consultation</li></a>
+        <a href="services.html"><li>Surveying</li></a>
+        <a href="services.html"><li>Site Supervision</li></a>
       </div>
 
       <div class="copyright">
