--- a/services.html
+++ b/services.html
@@ -181,8 +181,8 @@
       <div class="footer-col">
         <h3>Contact Us</h3>
         <a href="tel:+97771571632"><li>+977-71-571632</li></a>
-        <a href="tel:9857012648"><li>+977-9857012648</li></a>
-        <a href="tel:9857021648"><li>+977-9857021648</li></a>
+        <a href="tel:+9779857012648"><li>+977-9857012648</li></a>
+        <a href="tel:+9779857021648"><li>+977-9857021648</li></a>
         <a href="mailto:info@uespl.com.np"><li>info@uespl.com.np</li></a>
         <a href="mailto:uespl.org@gmail.com"><li>uespl.org@gmail.com</li></a>
       </div>
