--- a/about.html
+++ b/about.html
@@ -221,8 +221,8 @@
       <div class="footer-col">
         <h3>Contact Us</h3>
         <a href="tel:+97771571632"><li>+977-71-571632</li></a>
-        <a href="tel:9857012648"><li>+977-9857012648</li></a>
-        <a href="tel:9857021648"><li>+977-9857021648</li></a>
+        <a href="tel:+9779857012648"><li>+977-9857012648</li></a>
+        <a href="tel:+9779857021648"><li>+977-9857021648</li></a>
         <a href="mailto:info@uespl.com.np"><li>info@uespl.com.np</li></a>
         <a href="mailto:uespl.org@gmail.com"><li>uespl.org@gmail.com</li></a>
       </div>
@@ -239,10 +239,10 @@
       <div class="footer-col">
         <h3>Our Services</h3>
         <a href="services.html"><li>Architectural Design</li></a>
-        <a href="services.html"><li>Structural Design</li></a>        
-        <a href="services.html"><li>Interior Design</li></a>        
-        <a href="services.html"><li>Valuation</li></a>        
-        <a href="services.html"><li>Retrofit Design</li></a>       
+        <a href="services.html"><li>Structural Design</li></a>
+        <a href="services.html"><li>Interior Design</li></a>
+        <a href="services.html"><li>Valuation</li></a>
+        <a href="services.html"><li>Retrofit Design</li></a>
       </div>
 
       <div class="footer-col">
