--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
           <div class="section-title col-sm-12">
             <h3>Our Projects - - this screen is under maintenance</h3>
           </div>
-          <br><br><br><br><br>
+          <br /><br /><br /><br /><br />
           <div class="part col-sm-12">
             <div class="portfolio-nav col-sm-12" id="filter-button">
               <ul>
@@ -79,11 +79,15 @@
               </ul>
             </div>
 
-            <div class="project-gallery col-sm-12" id="project-gallery" >
+            <div class="project-gallery col-sm-12" id="project-gallery">
               <div class="portfolioContainer row">
                 <div class="grid-item col-md-4 p_commercial">
                   <figure>
-                    <img src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/BANQUET HALL AT SUDDHODHAN.jpg" width="250px" alt="image">
+                    <img
+                      src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/BANQUET HALL AT SUDDHODHAN.jpg"
+                      width="250px"
+                      alt="image"
+                    />
                     <figcaption class="fig-caption">
                       <i class="fa fa-serch"></i>
                       <h5 class="title">Suddhodhan</h5>
@@ -94,7 +98,11 @@
 
                 <div class="grid-item col-md-4 p_commercial">
                   <figure>
-                    <img src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/BANQUET HALL AT SUDDHODHAN.jpg" width="250px" alt="image">
+                    <img
+                      src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/BANQUET HALL AT SUDDHODHAN.jpg"
+                      width="250px"
+                      alt="image"
+                    />
                     <figcaption class="fig-caption">
                       <i class="fa fa-serch"></i>
                       <h5 class="title">Suddhodhan</h5>
@@ -102,14 +110,11 @@
                     </figcaption>
                   </figure>
                 </div>
-
               </div>
             </div>
-
           </div>
         </div>
       </div>
-
     </section>
 
     <!-- footer section -->
@@ -156,8 +161,8 @@
       <div class="footer-col">
         <h3>Contact Us</h3>
         <a href="tel:+97771571632"><li>+977-71-571632</li></a>
-        <a href="tel:9857012648"><li>+977-9857012648</li></a>
-        <a href="tel:9857021648"><li>+977-9857021648</li></a>
+        <a href="tel:+9779857012648"><li>+977-9857012648</li></a>
+        <a href="tel:+9779857021648"><li>+977-9857021648</li></a>
         <a href="mailto:info@uespl.com.np"><li>info@uespl.com.np</li></a>
         <a href="mailto:uespl.org@gmail.com"><li>uespl.org@gmail.com</li></a>
       </div>
@@ -174,10 +179,10 @@
       <div class="footer-col">
         <h3>Our Services</h3>
         <a href="services.html"><li>Architectural Design</li></a>
-        <a href="services.html"><li>Structural Design</li></a>        
-        <a href="services.html"><li>Interior Design</li></a>        
-        <a href="services.html"><li>Valuation</li></a>        
-        <a href="services.html"><li>Retrofit Design</li></a>       
+        <a href="services.html"><li>Structural Design</li></a>
+        <a href="services.html"><li>Interior Design</li></a>
+        <a href="services.html"><li>Valuation</li></a>
+        <a href="services.html"><li>Retrofit Design</li></a>
       </div>
 
       <div class="footer-col">
