--- a/about.html
+++ b/about.html
@@ -215,7 +215,7 @@
           Since then, it is rapidly growing as a notable consulting company in
           Nepal with
         </p>
-        <p>engagement in variousprofessional services..</p>
+        <p>engagement in variousprofessional services.</p>
       </div>
 
       <div class="footer-col">
