--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="navigation-items">
           <!-- <a href="index.html">Home</a> -->
           <a href="about.html">About Us</a>
-          <a href="projects.html">Projects</a>
+          <a href="commercial.html">Projects</a>
           <a href="services.html">Services</a>
           <a href="contact.html">Contact Us</a>
         </div>
