--- a/projects_not_use.html
+++ b/projects_not_use.html
@@ -68,6 +68,7 @@
 
       <!-- container  -->
       <div class="project-container">
+
         <!-- (Commercial) -->
         <a
           href="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/BANQUET HALL AT SUDDHODHAN.jpg"
@@ -1071,7 +1072,7 @@
         <h3>Quick Links</h3>
         <a href="index.html"><li>Home</li></a>
         <a href="about.html"><li>About us</li></a>
-        <a href="projects.html"><li>Projects</li></a>
+        <a href="commercial.html"><li>Projects</li></a>
         <a href="services.html"><li>Services</li></a>
         <a href="contact.html"><li>Contact us</li></a>
       </div>
